<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BodyBro</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="label_button_workout">Workout!</string>

    <string name="label_check_box_newbie">I\'m New</string>
    <string name="label_button_history">History</string>
    <string name="label_button_friends">Friends</string>
    <string name="label_button_settings">Settings</string>
    <string name="title_activity_muscle_group">MuscleGroupActivity</string>
    <string name="label_button_chest">Chest</string>
    <string name="label_button_back">Back</string>
    <string name="label_button_shoulders">Shoulders</string>
    <string name="label_button_legs">Legs</string>
    <string name="label_button_arms">Arms</string>
    <string name="label_button_body_weight">Body Weight</string>
    <string name="title_activity_chest">ChestActivity</string>
    <string name="label_button_randomize_workout">Randomize Workout</string>
    <string name="label_button_history_chest">History: Chest</string>
    <string name="title_activity_specific_group">SpecificGroupActivity</string>
    <string name="title_activity_specific_muscle_group">SpecificMuscleGroupActivity</string>
    <string name="label_button_create_workout">Create Workout</string>
    <string name="title_activity_create_workout">CreateWorkoutActivity</string>
    <string name="label_text_view_create_workout_title">Create a Workout!</string>
    <string name="label_button_Submit_New">Submit Custom Workout</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="label_button_organize">Organize</string>
    <string name="label_button_done">Done</string>
    <string name="string_button_done">Done</string>
    <string name="string_delete">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="label_button_login">Login</string>
    <string name="string_button_to_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="string_button_finish_register">Finish</string>
    <string name="hint_password_confirm">Confirm your password</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="string_splash_title">SUPER AWESOME SPLASHSCREEN</string>
    <string name="string_button_history_item_to_workout">Use This Workout</string>
    <string name="string_dropdown_label">Filter history by:</string>
    <string name="drop_downselect">Choose Muscle</string>
    <string name="drop_downselect_Chest">Chest</string>
    <string name="drop_downselect_Back">Back</string>
    <string name="drop_downselect_Shoulders">Shoulders</string>
	<string name="drop_downselect_Legs">Legs</string>
	<string name="drop_downselect_Arms">Arms</string>
	<string name="drop_downselect_Body_W">Body Weight</string>
	 <string name="Exercise_prompt">Choose a Exercise</string>
    <string name="Muscle_prompt">Choose a Muscle Group</string>
    <string-array name="Muscle_Group">
        <item>Arms</item>
        <item>Shoulders</item>
        <item>Legs</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Body Weight</item>
        </string-array>
        <string name="random_workout">random workout</string>
        <string name="string_exercise_diagram_button">Show Diagram</string>


</resources>
