<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context="${relativePackage}.${activityClass}" >

       <!--
scroll view >...
      -->
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/mint"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_chest"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/label_button_chest" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/label_button_back" />

    <Button
        android:id="@+id/button_shoulders"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/label_button_shoulders" />

    <Button
        android:id="@+id/button_legs"
        android:layout_width="match_parent"
       	android:layout_height="70dp"

        android:text="@string/label_button_legs" />

    <Button
        android:id="@+id/button_arms"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/label_button_arms" />

    <Button
        android:id="@+id/button_body_weight"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/label_button_body_weight" />

    <Button
        android:id="@+id/button_create_workout"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:text="@string/label_button_create_workout" />
</LinearLayout>
</ScrollView>
