<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/text_view_specific_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_randomize_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_specific_group"
        android:text="@string/label_button_randomize_workout"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/random_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_randomize_workout"
        android:layout_centerHorizontal="true"
        android:text="@string/random_workout"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_text_list_view_create_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/random_work"
        android:ems="10"
        android:hint="Enter Amount of Reps done"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_text_list_view_create_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_text_list_view_create_weight"
        android:ems="10"
        android:hint="Enter Weight Used"
        android:inputType="number" />

    <Button
        android:id="@+id/button_history_specific_group"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_below="@+id/edit_text_list_view_create_reps"
        android:layout_centerHorizontal="true"
        android:background="@drawable/loadimagebutton"
        android:minHeight="150dp"
        android:textStyle="bold"
        android:text="@string/string_button_done" />
    
    
    
    
    <SlidingDrawer
        android:id="@+id/slidingDrawer1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <ImageButton
            android:id="@+id/handle"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/loadimagestick"
            android:text="@string/string_exercise_diagram_button" />

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="300dp"
            android:layout_height="300dp" >

            <ImageView
                android:id="@+id/image_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

        </RelativeLayout>
    </SlidingDrawer>

</RelativeLayout>